# unityflow

./: .env.local.example  .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  DEVELOPMENT.md  LICENSE  README.md  pyproject.toml
.claude/: settings.json
.claude-plugin/: plugin.json
.claude/commands/: release.md
.claude/scripts/: ensure-dev-deps.sh  ensure-unityflow.sh
.claude/skills/resolve-conflicts/: SKILL.md
.claude/skills/unity-animation-workflow/: SKILL.md
.claude/skills/unity-prefab-scene/: SKILL.md
.claude/skills/unity-prefab-scene/examples/: README.md  analyze_prefab.py  create_ui_panel.py  modify_via_json.py
.claude/skills/unity-ui-workflow/: SKILL.md
.claude/skills/unity-yaml-resolve/: SKILL.md
.claude/skills/unity-yaml-workflow/: SKILL.md
.github/workflows/: ci.yml  publish.yml  sync-plugin-version.yml
broken_examples/: Main.unity  ex1_SampleScene.unity  ex2_Main.unity
data/: ClassIDReference.html
git-setup/: gitattributes.example  gitconfig.example  install.sh  pre-commit-config.example.yaml
hooks/: hooks.json
scripts/: UnityStubs.cs  setup.ps1  setup.sh  verify-csharp-ci.ps1  verify-csharp.csx  verify-unity-csharp.ps1  verify-unity-csharp.sh
skills/unity-animation-workflow/: SKILL.md
skills/unity-asset-refs/: SKILL.md
skills/unity-ui-workflow/: SKILL.md
skills/unity-yaml-resolve/: SKILL.md
skills/unity-yaml-workflow/: SKILL.md
src/prefab_tool/: __init__.py  asset_tracker.py  cli.py  diff.py  fast_parser.py  formats.py  git_utils.py  merge.py  normalizer.py  parser.py  query.py  script_parser.py  sprite.py  validator.py
src/unityflow/: __init__.py  asset_resolver.py  asset_tracker.py  builtin_schema.py  cli.py  diff.py  dll_inspector.py  fast_parser.py  fbx_loader.py  formats.py  git_utils.py  hierarchy.py  merge.py  meta_generator.py  normalizer.py  p4_resolver.py  p4_utils.py  parser.py  query.py  script_parser.py  semantic_diff.py  semantic_merge.py  sprite.py  validator.py  vcs_resolver.py
src/unityflow/animation/: __init__.py  cli.py  models.py  mutate.py  parser.py  query.py  writer.py
src/unityflow/animator/: __init__.py  cli.py  models.py  parser.py  query.py  writer.py
src/unityflow/bridge/: __init__.py  config.py  server.py  unity_client.py
src/unityflow/data/: __init__.py  builtin_schemas.json  class_ids.json
src/unityflow/hooks/: __init__.py
src/unityflow/hooks/scripts/: ensure-dev-deps.js  ensure-unityflow.js
src/unityflow/plugin/.claude-plugin/: .mcp.json  plugin.json
src/unityflow/plugin/hooks/: hooks.json
src/unityflow/plugin/scripts/: setup.ps1  setup.sh
src/unityflow/skills/: __init__.py
src/unityflow/skills/unity-animation-workflow/: SKILL.md
src/unityflow/skills/unity-ui-workflow/: SKILL.md
src/unityflow/skills/unity-yaml-resolve/: SKILL.md
src/unityflow/skills/unity-yaml-workflow/: SKILL.md
tests/: __init__.py  test_asset_resolver.py  test_asset_tracker.py  test_bridge.py  test_cli.py  test_dll_inspector.py  test_fbx_loader.py  test_formats.py  test_hierarchy.py  test_incremental.py  test_llm_helpers.py  test_merge.py  test_meta_generator.py  test_normalizer.py  test_parser.py  test_query.py  test_script_parser.py  test_semantic_diff.py  test_semantic_merge.py  test_validator.py  test_vcs_resolver.py
tests/fixtures/: BossSceneUI.prefab  Player_modification.prefab  Player_original.prefab  basic_prefab.prefab  button_panel_source.prefab  children_order.prefab  mixed_children_order.prefab  negative_quaternion.prefab  nested_prefab.prefab  nested_prefab_multiline.prefab  nested_with_added.prefab  prefab_with_modifications.prefab  unsorted_prefab.prefab
unity-bridge/: CHANGELOG.md  package.json
unity-bridge/Editor/: com.truecyan.unityflow-bridge.Editor.asmdef
unity-bridge/Editor/UnityFlowBridge/: InstanceRegistry.cs  UnityFlowBridge.cs  UnityFlowHttpServer.cs
(+11 files in other folders)
