[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "prefab-tool"
version = "0.1.0"
description = "Unity Prefab Deterministic Serializer - canonical serialization for Unity YAML files"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "prefab-tool contributors"}
]
keywords = ["unity", "prefab", "yaml", "serializer", "deterministic", "vcs", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "unityparser>=4.0.0",
    "ruamel.yaml>=0.18.0",
    "click>=8.0.0",
]

[project.optional-dependencies]
fast = [
    "rapidyaml>=0.10.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
all = [
    "prefab-tool[fast,dev]",
]

[project.scripts]
prefab-tool = "prefab_tool.cli:main"

[project.urls]
Homepage = "https://github.com/TrueCyan/prefab-tool"
Repository = "https://github.com/TrueCyan/prefab-tool"
Issues = "https://github.com/TrueCyan/prefab-tool/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
