[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "unityflow"
version = "0.8.2"
description = "Unity workflow automation - edit, diff, and merge prefabs, scenes, and assets without the Unity Editor"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.12"
authors = [
    {name = "unityflow contributors"}
]
keywords = ["unity", "prefab", "scene", "asset", "yaml", "llm", "workflow", "automation", "git"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Games/Entertainment",
]

dependencies = [
    "unityparser>=4.0.0",
    "rapidyaml>=0.10.0",
    "click>=8.0.0",
    "packaging>=21.0",
    "ufbx>=0.0.5",
]

[project.optional-dependencies]
bridge = [
    "mcp>=1.26.0,<2",
]
dev = [
    "pytest==9.0.0",
    "pytest-cov==6.0.0",
    "black==26.1.0",
    "ruff==0.14.14",
]
all = [
    "unityflow[dev]",
    "unityflow[bridge]",
]

[project.scripts]
unityflow = "unityflow.cli:main"
unityflow-bridge = "unityflow.bridge.server:main"

[project.urls]
Homepage = "https://github.com/TrueCyan/unityflow"
Repository = "https://github.com/TrueCyan/unityflow"
Issues = "https://github.com/TrueCyan/unityflow/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
"unityflow.data" = ["*.json"]

[tool.black]
line-length = 120
target-version = ["py312"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
